--- a/style.css
+++ b/style.css
@@ -50,22 +50,24 @@ header {
     color: var(--Dk-Gray-BLue);
     position: relative;
 }
-.left ul li:hover {
-    font-weight: 700;
-    cursor: pointer;
-}
-.left ul li::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    position: absolute;
-    background-color: var(--orange);
-    bottom: -2.8rem;
-    left: 0;
-    transition: all 0.5s ease-in-out;
-}
-.left ul li:hover::after{
-    width: 100%;
+@media (min-width: 600px) {
+    .left ul li:hover {
+        font-weight: 700;
+        cursor: pointer;
+    }
+    .left ul li::after {
+        content: '';
+        width: 0;
+        height: 3px;
+        position: absolute;
+        background-color: var(--orange);
+        bottom: -2.8rem;
+        left: 0;
+        transition: all 0.5s ease-in-out;
+    }
+    .left ul li:hover::after{
+        width: 100%;
+    }
 }
 
 .right ul li:last-child img {
@@ -217,6 +219,7 @@ header {
     box-shadow: 0 8px 10px 4px rgba(0,0,0,0.4);
     border: none;
     border-radius: 10px;
+    z-index: 5;
 }
 #cart > p {
     position: absolute;
@@ -292,9 +295,12 @@ header {
     height: 50px;
     text-align: center;
 }
+.thumbs .thumb-img:hover img{
+    filter: invert(0.23);
+}
 
 .thumbs .active {
-    border: 5px solid var(--orange);
+    border: 4px solid var(--orange);
     transform: scale(0.93);
 }
 .thumbs .active img {
@@ -306,7 +312,8 @@ header {
 
 /* HOVER EFFETS */
 .thumb-img:hover,
-button
+button,
+.right ul li:hover
 {
     cursor: pointer;
 }
@@ -314,6 +321,73 @@ button
 
 
 /* HOVER EFFECTS */
+
+@media (max-width: 1040px) {
+    .body-container {
+        padding: 0;
+    }
+    header {
+        padding: 1rem 2rem 2rem;
+    }
+    .content {
+        /* border: 3px solid red; */
+        padding: 0;
+        /* align-items: flex-start; */
+        width: 100%;
+        flex-direction: column;
+    }
+    .gallery {
+        /* height: fit-content; */
+        /* border: 2px solid green; */
+        max-height: 400px;
+        width: 100%;
+        /* max-width: 600px; */
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+    }
+    .lg-img {
+        width: 70%;
+    }
+    .lg-img img {
+        width: 100%;
+        height: 100%;
+    }
+    .thumbs {
+        border: inherit;
+        width: 10%;
+        gap: 0;
+        align-items: flex-end;
+        justify-content: start;
+        flex-direction: column;
+    }
+    .thumb-img img {
+        width: 100%;
+    }
+
+    .product-details {
+        width: 100%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+    .desc {
+        margin: 0 auto 1rem;
+        /* border: 3px solid blue; */
+        max-width: 650px;
+    }
+    .all-price {
+        /* border: 3px solid blue; */
+        margin: 0 auto;
+        text-align: center;
+    }
+    .price {
+        justify-content: center;
+    }
+    .amount {
+        width: 70%;
+        margin: 0 auto 5rem;
+    }
+}
 
 
 @media (max-width: 600px) {
@@ -400,9 +474,13 @@ button
     .gallery, .product-details {
         width: 100%;
     }
+    .lg-img {
+        width: 100%;
+    }
     .lg-img > img {
         border-radius: 0;
         height: 70vh;
+        width: 100%;
     }
     .company {
         font-size: 0.8rem;
@@ -410,6 +488,7 @@ button
     .product-details {
         padding: 0 1.5rem;
         margin-bottom: 5rem;
+        text-align: left;
     }
     .product-details h1 {
         font-size: 1.5rem;
@@ -427,3 +506,5 @@ button
         width: 100%;
     }
 }
+
+
