--- a/style.css
+++ b/style.css
@@ -410,7 +410,6 @@ button,
     }
     header {
         padding: 1rem 1.5rem;
-        border: 1px solid red;
     }
     .left {
         align-items: baseline;
@@ -479,7 +478,7 @@ button,
     }
     .lg-img > img {
         border-radius: 0;
-        height: 70vh;
+        height: 100%;
         width: 100%;
     }
     .company {
